--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .brick {
-    background-color: blue;
+    background-color: green
 }
 
 .coin {
@@ -64,5 +64,5 @@ body {
     border: 1px solid white;
     position: absolute;
     top: 10px;
-    left: 310px;
+    left: 510px;
 }
