--- a/style.css
+++ b/style.css
@@ -36,13 +36,17 @@ body {
 }
 
 #player1 {
-    background: url('pacman.gif');
+    background: url('Lakitu_King.webp');
     background-repeat: no-repeat;
-    background-position: center;
+    background-position:center;
     background-size: cover;
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
     position: absolute;
+}
+
+#player1:hover {
+    transform: rotateY(180deg);
 }
 
 #enemy {
