--- a/style.css
+++ b/style.css
@@ -13,7 +13,10 @@ body {
 }
 
 .brick {
-    background-color: green
+    background: url('brick.webp');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .coin {
